package system.controller.dao;

public interface Idable {

    String getId();
}
